--- a/Systemet/Views/Konto/inloggad.cshtml
+++ b/Systemet/Views/Konto/inloggad.cshtml
@@ -18,14 +18,10 @@
         </div>
         <div class="row">
 
-            @*<span class="glyphicon glyphicon-user input-group-btn top"></span>*@
-            @*@Html.ActionLink("mina uppgifter", "Redigera", "Konto", htmlAttributes: new { @class = "form-control input-group pull-left btn-danger btn-primary" })*@
-
             <div class="col-lg-4">
 
-                @if (Model.ansökningarna != null)
+                @if (Model.ansökningarna.Count() > 0)
                 {
-
                     <h3>Mina ansökningar</h3>
                     foreach (var item in Model.ansökningarna)
                     {
@@ -50,7 +46,6 @@
                             </span>
                             <button class="btn btn-xs" type="button" style="background-color:#d46666; font-size:x-small" id="tabort @item.FörfråganID" onclick="location.href='@Url.Action("knapp", "Konto", new { item.text, item.FörfråganID})'">x</button>
                         }
-
                     }
                 }
 
@@ -59,7 +54,7 @@
                 @using (Html.BeginForm("gåmedigrupp", "Grupp"))
                 {<h2>Sök Grupp:</h2>
                 <div class=" input-group pull-right">
-                    @ViewBag.Sökning
+                    @*@Model.allagrupper*@
                     @Html.TextBox("sökning", null, htmlAttributes: new { @id = "sökning", @class = "form-control input-group pull-right" })
                     <span class="input-group-btn">
                         <input type="submit" value="sökning" id="sökning" class="btn btn-secondary btn-danger" />
@@ -122,7 +117,6 @@
                         @*SLUT KALENDER*@
 
                         <div class="col-sm-6">
-
                             <table class="table table-condensed table-responsive">
                                 <thead>
                                     <tr>
@@ -132,11 +126,8 @@
                             </table>
 
                             @{var uppgifter = Model.uppgifterna.Where(u => u.TillhörGrupp.GruppID == item.GruppID).ToList();}
-
                             @foreach (var uppg in uppgifter)
                             {
-                                //uppgifter som inloggad är ansvarig för ska visas i rött, uppgifter som ingen tagit på sig ännu ska visas i blått
-
                                 //om det inte är nån som är ansvarig för uppgiften
                                 if (uppg.Ansvarig == null)
                                 {
@@ -144,7 +135,6 @@
                                     {
                                         <h3><span class="label label-danger">@uppg.Namn</span></h3>
                                     }
-
                                 }
                                 //om inloggad är ansvarig
                                 else if (uppg.Ansvarig.AnvändarID == Convert.ToInt32(Session["AnvändarID"]))
@@ -160,8 +150,7 @@
                                     if (uppg.Utförd == false && uppg.bortplockad == false)
                                     {
                                         <h3><span class="label label-default">@uppg.Namn</span></h3>
-                                    }
-                                    
+                                    }                                   
                                 }
                             }
                         </div>
@@ -185,7 +174,7 @@
     <script type="text/javascript">
     $(function autocomplete() {
         $("#sökning").autocomplete({
-            source: @Html.Raw(Json.Encode(ViewBag.allagrupper))
+            source: @Html.Raw(Json.Encode(Model.allagrupper))
         });
     });
 </script>
